src/test/ui/const-generics/min_const_generics/issue-67945-3.stderr
error: generic `Self` types are currently not permitted in anonymous constants
  --> $DIR/issue-67945-3.rs:5:27
   |
LL |         let x: Option<Box<Self>> = None;
   |                           ^^^^

error: aborting due to previous error

